--- a/Paub2022 Vjezba/Paub2022 Vjezba.csproj
+++ b/Paub2022 Vjezba/Paub2022 Vjezba.csproj
@@ -166,7 +166,7 @@
     <Content Include="Views\mojprvi\Index.cshtml" />
     <Content Include="Views\mojprvi\Druga.cshtml" />
     <Content Include="Views\mojprvi\Treca.cshtml" />
-    <Content Include="Views\mojprvi\Cetvrta.cshtml" />
+    <Content Include="Views\mojprvi\Student.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
